src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>ER_Approval_Trigger_Value__c</fullName>
        <label>Approval Trigger Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ER_Business_Unit__c</fullName>
        <formula>TEXT(Pricebook2.ER_Business_Unit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_Configuration__c</fullName>
        <label>Configuration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hidden</fullName>
                </value>
                <value>
                    <fullName>Displayed</fullName>
                    <default>true</default>
                    <label>Displayed</label>
                </value>
                <value>
                    <fullName>SelectedOptional</fullName>
                    <label>Selected Optional</label>
                </value>
                <value>
                    <fullName>SelectedMandatory</fullName>
                    <label>Selected Mandatory</label>
                </value>
                <value>
                    <fullName>SelectedHidden</fullName>
                    <label>Selected Hidden</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ER_Percentage__c</fullName>
        <label>Percentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ER_SolutionName__c</fullName>
        <formula>Product2.ER_Solution__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ER_ValueType__c</fullName>
        <description>-When the service is set as “Percentage”, the symbol displayed is ‘%.
-When the service is set as “Currency”, the symbol displayed is the user’s currency ISO code.</description>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percentage</fullName>
                </value>
                <value>
                    <fullName>Currency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>HU_Solution_Administration</fullName>
        <columns>PRICEBOOK.NAME</columns>
        <columns>PRICEBOOK.ACTIVE</columns>
        <columns>PRODUCT.ACTIVE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>ER_Business_Unit__c</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>PRODUCT.CUSTOMER_PRODUCT_ID</columns>
        <columns>ER_Configuration__c</columns>
        <columns>PRODUCT.DEFAULT_PRICE</columns>
        <columns>ER_Percentage__c</columns>
        <columns>ER_Approval_Trigger_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>Hu</value>
        </filters>
        <label>HU Solution Administration</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>HUN</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SK_Solution_Administration</fullName>
        <columns>PRICEBOOK.NAME</columns>
        <columns>PRICEBOOK.ACTIVE</columns>
        <columns>PRODUCT.ACTIVE</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>ER_Business_Unit__c</columns>
        <columns>PRODUCT.NAME</columns>
        <columns>PRODUCT.CUSTOMER_PRODUCT_ID</columns>
        <columns>ER_Configuration__c</columns>
        <columns>PRODUCT.DEFAULT_PRICE</columns>
        <columns>ER_Percentage__c</columns>
        <columns>ER_Approval_Trigger_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ER_Business_Unit__c</field>
            <operation>equals</operation>
            <value>SK</value>
        </filters>
        <label>SK Solution Administration</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>Slovakia</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>